lib_LTLIBRARIES=libm3core.la

am_LIBTOOLFLAGS=--verbose

libm3core_la_SOURCES=\
Address.i3.cpp \
Address.m3.cpp \
ASCII.i3.cpp \
ASCII.m3.cpp \
BasicCtypes.i3.cpp \
Boolean.i3.cpp \
Boolean.m3.cpp \
CConvert.i3.cpp \
CConvert.m3.cpp \
CDErr.i3.cpp \
Cerrno.i3.cpp \
Char.i3.cpp \
Char.m3.cpp \
CommDlg.i3.cpp \
Compiler.i3.cpp \
Compiler.m3.cpp \
ContextC.i3.cpp \
Convert.i3.cpp \
Convert.m3.cpp \
Coroutine.i3.cpp \
CoroutineUcontext.i3.cpp \
CoroutineUcontext.m3.cpp \
Csetjmp.i3.cpp \
Csignal.i3.cpp \
Cstddef.i3.cpp \
Cstdint.i3.cpp \
Cstdio.i3.cpp \
Cstdlib.i3.cpp \
Cstring.i3.cpp \
Ctypes.i3.cpp \
Date.i3.cpp \
DatePosix.i3.cpp \
DatePosix.m3.cpp \
DragonInt.i3.cpp \
DragonInt.m3.cpp \
DragonT.i3.cpp \
DragonT.m3.cpp \
Extended.i3.cpp \
Extended.m3.cpp \
ExtendedFloat.i3.cpp \
ExtendedFloat.m3.cpp \
Fingerprint.i3.cpp \
Fingerprint.m3.cpp \
FloatMode.i3.cpp \
FloatMode.m3.cpp \
FloatModeC.i3.cpp \
FloatUtils.i3.cpp \
FloatUtils.m3.cpp \
FmtTime.i3.cpp \
FmtTime.m3.cpp \
FPU.i3.cpp \
Grisu.i3.cpp \
Grisu.m3.cpp \
IEEESpecial.i3.cpp \
IEEESpecial.m3.cpp \
Int32.i3.cpp \
Int32.m3.cpp \
Int64.i3.cpp \
Int64.m3.cpp \
Integer.i3.cpp \
Integer.m3.cpp \
Long.i3.cpp \
Long.m3.cpp \
LongFloat.i3.cpp \
LongFloat.m3.cpp \
Longint.i3.cpp \
Longint.m3.cpp \
LongReal.i3.cpp \
LongReal.m3.cpp \
LongRealRep.i3.cpp \
LongRep.i3.cpp \
M3toC.i3.cpp \
M3toC.m3.cpp \
Main.i3.cpp \
MutexRep.i3.cpp \
NB30.i3.cpp \
NB30.m3.cpp \
Poly.i3.cpp \
Poly.m3.cpp \
PolyBasis.i3.cpp \
PolyBasis.m3.cpp \
Real.i3.cpp \
Real.m3.cpp \
RealFloat.i3.cpp \
RealFloat.m3.cpp \
RealRep.i3.cpp \
Refany.i3.cpp \
Refany.m3.cpp \
RT0.i3.cpp \
RT0.m3.cpp \
RTAllocator.i3.cpp \
RTAllocator.m3.cpp \
RTAllocCnts.i3.cpp \
RTAllocStats.i3.cpp \
RTAllocStats.m3.cpp \
RTArgs.i3.cpp \
RTArgs.m3.cpp \
RTCollector.i3.cpp \
RTCollector.m3.cpp \
RTCollectorSRC.i3.cpp \
RTDebug.i3.cpp \
RTDebug.m3.cpp \
RTError.i3.cpp \
RTError.m3.cpp \
RTException.i3.cpp \
RTException.m3.cpp \
RTExFrame.m3.cpp \
RTHeap.i3.cpp \
RTHeap.m3.cpp \
RTHeapDebug.i3.cpp \
RTHeapDebug.m3.cpp \
RTHeapEvent.i3.cpp \
RTHeapInfo.i3.cpp \
RTHeapInfo.m3.cpp \
RTHeapMap.i3.cpp \
RTHeapMap.m3.cpp \
RTHeapRep.i3.cpp \
RTHeapRep.m3.cpp \
RTHeapStats.i3.cpp \
RTHeapStats.m3.cpp \
RTHooks.i3.cpp \
RTHooks.m3.cpp \
RTIO.i3.cpp \
RTIO.m3.cpp \
RTLinker.i3.cpp \
RTLinker.m3.cpp \
RTLinkerX.i3.cpp \
RTMachine.i3.cpp \
RTMapOp.i3.cpp \
RTMapOp.m3.cpp \
RTMisc.i3.cpp \
RTMisc.m3.cpp \
RTModule.i3.cpp \
RTOS.i3.cpp \
RTOS.m3.cpp \
RTPacking.i3.cpp \
RTPacking.m3.cpp \
RTParams.i3.cpp \
RTParams.m3.cpp \
RTPerfTool.i3.cpp \
RTPerfTool.m3.cpp \
RTProcedure.i3.cpp \
RTProcedure.m3.cpp \
RTProcedureSRC.i3.cpp \
RTProcess.i3.cpp \
RTProcess.m3.cpp \
RTSignal.i3.cpp \
RTSignal.m3.cpp \
RTSignalC.i3.cpp \
RTSignalPrivate.i3.cpp \
RTStack.i3.cpp \
RTThread.i3.cpp \
RTTipe.i3.cpp \
RTTipe.m3.cpp \
RTType.i3.cpp \
RTType.m3.cpp \
RTTypeFP.i3.cpp \
RTTypeFP.m3.cpp \
RTTypeMap.i3.cpp \
RTTypeMap.m3.cpp \
RTTypeSRC.i3.cpp \
RTutils.i3.cpp \
RTutils.m3.cpp \
RTWeakRef.i3.cpp \
RuntimeError.i3.cpp \
RuntimeError.m3.cpp \
Scheduler.i3.cpp \
SchedulerPosix.i3.cpp \
String16.i3.cpp \
String16.m3.cpp \
String8.i3.cpp \
String8.m3.cpp \
Text.i3.cpp \
Text.m3.cpp \
Text16.i3.cpp \
Text16.m3.cpp \
Text16Short.i3.cpp \
Text16Short.m3.cpp \
Text8.i3.cpp \
Text8.m3.cpp \
Text8CString.i3.cpp \
Text8CString.m3.cpp \
Text8Short.i3.cpp \
Text8Short.m3.cpp \
TextCat.i3.cpp \
TextCat.m3.cpp \
TextClass.i3.cpp \
TextClass.m3.cpp \
TextConv.i3.cpp \
TextConv.m3.cpp \
TextLiteral.i3.cpp \
TextLiteral.m3.cpp \
TextStats.i3.cpp \
TextStats.m3.cpp \
TextSub.i3.cpp \
TextSub.m3.cpp \
TextToFloat.i3.cpp \
TextToFloat.m3.cpp \
Thread.i3.cpp \
ThreadEvent.i3.cpp \
ThreadF.i3.cpp \
ThreadInternal.i3.cpp \
ThreadPThread.i3.cpp \
ThreadPThread.m3.cpp \
Tick.i3.cpp \
TickPortable.m3.cpp \
Time.i3.cpp \
TimePosix.i3.cpp \
TimePosix.m3.cpp \
TlHelp32.i3.cpp \
Udir.i3.cpp \
Uerror.i3.cpp \
Uexec.i3.cpp \
Ugrp.i3.cpp \
Uin.i3.cpp \
Umman.i3.cpp \
Unetdb.i3.cpp \
Unicode.i3.cpp \
Unicode.m3.cpp \
Unix.i3.cpp \
Unix.m3.cpp \
UnixC.i3.cpp \
Uprocess.i3.cpp \
Upwd.i3.cpp \
Usched.i3.cpp \
Usignal.i3.cpp \
Usocket.i3.cpp \
Ustat.i3.cpp \
Utime.i3.cpp \
Utypes.i3.cpp \
Uugid.i3.cpp \
Uuio.i3.cpp \
Uutmp.i3.cpp \
WeakRef.i3.cpp \
WeakRef.m3.cpp \
WideChar.i3.cpp \
WideChar.m3.cpp \
WinBase.i3.cpp \
WinBaseTypes.i3.cpp \
WinCommCtrl.i3.cpp \
WinCon.i3.cpp \
WinDef.i3.cpp \
WinDef.m3.cpp \
WinError.i3.cpp \
WinGDI.i3.cpp \
WinImageList.i3.cpp \
WinIoctl.i3.cpp \
WinIoctl.m3.cpp \
WinMidi.i3.cpp \
WinNetwk.i3.cpp \
WinNLS.i3.cpp \
WinNT.i3.cpp \
WinNT.m3.cpp \
WinReg.i3.cpp \
WinReg.m3.cpp \
WinUser.i3.cpp \
WinVer.i3.cpp \
WinVer.m3.cpp \
Word.i3.cpp \
Word.m3.cpp \
WordRep.i3.cpp
